# python-template

./: Dockerfile  Makefile  Pipfile  README.md  mkdocs.yml  pyproject.toml
docs/html/: 404.html
tests/: test_sample.py  test_sample_class.py
